--- a/arch/arm64/boot/dts/allwinner/sun50i-h313-x96q-pro.dts
+++ b/arch/arm64/boot/dts/allwinner/sun50i-h313-x96q-pro.dts
@@ -16,9 +16,7 @@
 
 	aliases {
 		mmc0 = &mmc0;
-		mmc2 = &mmc2;
 		ethernet0 = &emac1;
-		ethernet1 = &wlan;
 		serial0 = &uart0;
 	};
 
@@ -55,22 +53,6 @@
 		enable-active-high;
 		/* gpio = <&pio 2 16 GPIO_ACTIVE_HIGH>; PC16 */
 		status = "okay";
-	};
-
-	reg_vcc_wifi: reg_vcc_wifi {
-		compatible = "regulator-fixed";
-		regulator-name = "vcc-wifi";
-		regulator-min-microvolt = <3300000>;
-		regulator-max-microvolt = <3300000>;
-		gpio = <&pio 6 18 GPIO_ACTIVE_HIGH>; /* PG18 WL_REG_ON */
-		regulator-always-on;
-		enable-active-high;
-		status = "okay";
-	};
-
-	wifi_pwrseq: wifi_pwrseq {
-		compatible = "mmc-pwrseq-simple";
-		post-power-on-delay-ms = <200>;
 	};
 
 	openvfd {
@@ -185,6 +167,7 @@
 };
 
 &ir {
+	linux,rc-map-name = "rc-beelink-gs1";
 	status = "okay";
 };
 
@@ -199,33 +182,6 @@
 	vmmc-supply = <&reg_dldo1>;
 	broken-cd;
 	bus-width = <4>;
-	status = "okay";
-};
-
-&mmc1 {
-	vmmc-supply = <&reg_dldo1>;
-	vqmmc-supply = <&reg_vcc_wifi>;
-	mmc-pwrseq = <&wifi_pwrseq>;
-	bus-width = <4>;
-	non-removable;
-	//status = "okay";
-
-	wlan: wifi@1 {
-		reg = <1>;
-		compatible = "xradio,xr819",
-			     "brcm,bcm4329-fmac";
-		interrupt-parent = <&pio>;
-		interrupts = <6 15 IRQ_TYPE_EDGE_RISING>; /* PG15 WL_HOSTWAKE*/
-		interrupt-names = "host-wake";
-		local-mac-address = [dc 44 6d c0 ff 03];
-	};
-};
-
-&mmc2 {
-	vmmc-supply = <&reg_dldo1>;
-	bus-width = <8>;
-	non-removable;
-	cap-mmc-hw-reset;
 	status = "okay";
 };
 
@@ -305,24 +261,6 @@
 	status = "okay";
 };
 
-&uart1 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&uart1_pins>, <&uart1_rts_cts_pins>;
-	uart-has-rtscts;
-	//status = "okay";
-
-	bluetooth {
-		compatible = "brcm,bcm43438-bt";
-		clocks = <&rtc 1>;
-		clock-names = "lpo";
-		vbat-supply = <&reg_dldo1>;
-		vddio-supply = <&reg_dldo1>;
-		device-wakeup-gpios = <&r_pio 0 6 GPIO_ACTIVE_HIGH>; /* PL6 */
-		host-wakeup-gpios = <&r_pio 0 5 GPIO_ACTIVE_HIGH>; /* PL5 */
-		shutdown-gpios = <&r_pio 0 4 GPIO_ACTIVE_HIGH>; /* PL4 */
-	};
-};
-
 &usbotg {
 	dr_mode = "peripheral";
 	status = "okay";
@@ -330,5 +268,32 @@
 
 &usbphy {
 	usb1_vbus-supply = <&reg_usb1_vbus>;
+	status = "okay";
+};
+&ahub_codec {
+	status = "okay";
+};
+
+&ahub_cpudai0 {
+	status = "okay";
+};
+
+&ahub_cpudai1 {
+	status = "okay";
+};
+
+&ahub_cpudai2 {
+	status = "okay";
+};
+
+&sndahub {
+	status = "okay";
+};
+
+&ahub_i2s1 {
+	status = "okay";
+};
+
+&hdmi_audio {
 	status = "okay";
 };
